--- a/src/tutorials/03_css/css/style.css
+++ b/src/tutorials/03_css/css/style.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
 h1,
 h2,
 h3,
@@ -52,6 +57,13 @@ li {
     font-style: italic;
 } */
 
+.container {
+    width: 700px;
+    /* margin-left: auto;
+    margin-right: auto; */
+    margin: 0 auto;
+}
+
 #author {
     font-style: italic;
     font-size: 18px;
@@ -76,6 +88,11 @@ li {
 
 .main-header {
     background-color: #f7f7f7;
+    /* padding: 20px;
+    padding-left: 40px;
+    padding-right: 40px; */
+    padding: 20px 40px;
+    height: 80px;
 }
 
 aside {
@@ -107,4 +124,9 @@ a:hover {
 
 a:active {
     font-style: italic;
+}
+
+.post-img {
+    width: 100%;
+    height: auto;
 }
