--- a/src/tutorials/grid/style.css
+++ b/src/tutorials/grid/style.css
@@ -28,7 +28,7 @@
 
 .el--8 {
     background-color: rgb(34, 88, 168);
-    height: 150px;
+    height: 250px;
 }
 
 .container {
@@ -36,16 +36,15 @@
     background-color: #ddd;
     font-size: 40px;
     margin: 40px;
-    /* flaxbox */
-    display: flex;
-    /*vertical*/
-    align-items: center;
-    /* ----main axis------*/
-    justify-content: flex-start;
-    gap: 30px
+    display: grid;
+    grid-template-columns: 250px 250px 1fr 1fr;
+    grid-template-rows: 2fr 1fr;
+
+    column-gap: 40px;
+    row-gap: 40px;
 }
 
-.el--1 {
+/* .el--1 {
     align-self: flex-start;
 }
 
@@ -55,4 +54,4 @@
 
 .el--6 {
     order: -1;
-}
+} */
