--- a/src/tutorials/grid/style.css
+++ b/src/tutorials/grid/style.css
@@ -44,14 +44,13 @@
     row-gap: 40px;
 }
 
-/* .el--1 {
-    align-self: flex-start;
+
+.el--8 {
+    grid-column: 2/3;
+    grid-row: 1/2;
 }
 
-.el--4 {
-    align-self: stretch;
+.el--2 {
+    grid-column: 1/2;
+    grid-row: 2/3
 }
-
-.el--6 {
-    order: -1;
-} */
