--- a/src/index.css
+++ b/src/index.css
@@ -1,40 +1,47 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
-
-* {
-    box-sizing: border-box;
-}
-
+html,
 body {
-    margin: 10px;
-
-}
-
-header {
-    height: 90px;
-    background-color: #21222A;
-    padding: 30px 25px;
-}
-
-nav {
+    background-color: #0B2434;
     display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
+}
+
+
+main {
     height: 100%;
+    max-height: 400px;
+    min-width: 800px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-nav>img {
-    width: 40px;
+
+.content {
+    width: 100%;
+    height: 500px;
+    border-radius: 10px;
+    background-color: #F5F5F5;
+    padding: 20px;
 }
 
-.footer {
-    padding: 0 30px 0 30px;
-    margin-right: 7px;
+
+.dice-container {
+    display: grid;
+    gap: 20px;
+    justify-content: space-between;
+    grid-template: auto auto /repeat(5, 1fr);
 }
 
-header>span {
-    color: #61DAFB;
-    font-size: 1.4rem;
-}
-
-.header-img {
-    width: 40px;
+.dice-container button {
+    height: 50px;
+    width: 50px;
+    border-radius: 10px;
+    border: none;
+    background-color: white;
+    font-size: 1.75rem;
+    cursor: pointer;
+    font-weight: bold;
 }
